methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:36: error: expected class or object definition
def changeColonne() {
^MethodsPicture:42: error: expected class or object definition
def changeLigne() {
^MethodsPicture:48: error: expected start of definition
override def run() {
         ^MethodsPicture:58: error: Unmatched closing brace '}' ignored here
}
^