methods.picture.MethodsPicture.scala.code
def marquerSol(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def faireV(c:Color) {
  marquerSol(c)
  avance()
  gauche()
  avance()
  marquerSol(c)
  recule()
  droite()
  avance()
  marquerSol(c)
  avance()
  avance()
  gauche()
  avance()
  avance()
}

def faireMotif() {
  avance()
	avance()
  faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
  }
  recule()
  recule()
}

def changeColonne() {
  for (compt1 <- 1 to 7) {
    avance()
  }
}

def changeLigne() {
  gauche()
  changeColonne()
  droite()
}

override def run() {
  for (compteur1 <- 1 to 3) {
    for (compteur2 <- 1 to 3) {
      faireMotif()
    	changeColonne()    
    }
		changeLigne()
  }
}